added plotting functions

--- a/notebooks/mm3_Segment.ipynb
+++ b/notebooks/mm3_Segment.ipynb
@@ -90,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "param_file_path = '/Users/jt/drive/code/mm_test_data/shift_down/params_shift_down.yaml'\n",
+    "param_file_path = '/Users/jt/data/From_Fangwei/5FOV200/params_SJ110_100X.yaml'\n",
     "params = mm3.init_mm3_helpers(param_file_path)\n",
     "\n",
     "# load specs file\n",
@@ -130,7 +130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Load the actual images, depending on if it is TIFF or HDF5"
+    "### Load the actual images"
    ]
   },
   {
@@ -140,11 +140,11 @@
    "outputs": [],
    "source": [
     "img_stack = mm3.load_stack(fov_id, peak_id, color='c1')\n",
-    "pc_img = img_stack[2]\n",
+    "pc_img = img_stack[40]\n",
     "\n",
     "sub_stack = mm3.load_stack(fov_id, peak_id, color='sub')\n",
     "# take first time point\n",
-    "sub_img = sub_stack[2]\n",
+    "sub_img = sub_stack[40]\n",
     "\n",
     "fig, axes = plt.subplots(ncols=2, sharex=True, sharey=True)\n",
     "ax = axes.ravel()\n",
@@ -193,7 +193,7 @@
     "\n",
     "# Morphological operations\n",
     "# tool for transformations\n",
-    "tool = morphology.disk(2)\n",
+    "tool = morphology.disk(3)\n",
     "\n",
     "# Opening = erosion then dialation.\n",
     "# opening smooths images, breaks isthmuses, and eliminates protrusions.\n",
@@ -230,12 +230,12 @@
     "\n",
     "# threshold distance image\n",
     "distance_thresh = np.zeros_like(distance)\n",
-    "distance_thresh[distance < 2] = 0\n",
-    "distance_thresh[distance >= 2] = 1\n",
+    "distance_thresh[distance < 3] = 0\n",
+    "distance_thresh[distance >= 3] = 1\n",
     "distance_thresh_plot = distance_thresh.copy()\n",
     "\n",
     "# do an extra opening on the distance\n",
-    "distance_opened = morphology.binary_opening(distance_thresh, morphology.disk(1))\n",
+    "distance_opened = morphology.binary_opening(distance_thresh, morphology.disk(2))\n",
     "distance_opened_plot = distance_opened.copy()\n",
     "\n",
     "# remove artifacts connected to image border\n",
@@ -255,14 +255,14 @@
     "\n",
     "# label using the random walker (diffusion watershed) algorithm\n",
     "# set anything outside of OTSU threshold to -1 so it will not be labeled\n",
-    "markers[morph == 0] = -1\n",
+    "markers[threshholded == 0] = -1\n",
     "# here is the main algorithm\n",
     "labeled_image = segmentation.random_walker(-1*sub_img, markers)\n",
     "# put negative values back to zero for proper image\n",
     "labeled_image[labeled_image == -1] = 0\n",
     "\n",
     "# or watershed\n",
-    "# labeled_image = morphology.watershed(-1*sub_img, markers, mask=morph)\n",
+    "# labeled_image = morphology.watershed(-1*sub_img, markers, mask=threshholded)\n",
     "\n",
     "\n",
     "### Plot it up. \n",
