--- a/notebooks/mm3_analysis.ipynb
+++ b/notebooks/mm3_analysis.ipynb
@@ -26,6 +26,8 @@
     "from __future__ import division\n",
     "\n",
     "# import modules\n",
+    "import sys\n",
+    "import os\n",
     "from pprint import pprint # for human readable file output\n",
     "try:\n",
     "    import cPickle as pickle\n",
@@ -37,27 +39,17 @@
     "pd.options.display.float_format = '{:,.3f}'.format\n",
     "from IPython.display import display, HTML\n",
     "\n",
-    "# you need to import mm3_helpers\n",
+    "# load mm3 modules, always reload the plotting modules\n",
     "%load_ext autoreload\n",
-    "%autoreload 2 # this will reload mm3_plots.py everytime you run something. \n",
-    "sys.path.insert(0, '../../mm3/') # path to your mm3 folder. \n",
-    "%aimport mm3_plots\n",
-    "\n",
+    "%autoreload 2\n",
+    "sys.path.insert(0, '/mm3/') # path to mm3 folder\n",
     "import mm3_helpers as mm3\n",
+    "%aimport mm3_plots\n",
     "\n",
     "# plotting modules and settings. \n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
-    "from matplotlib.colors import ListedColormap\n",
-    "%matplotlib\n",
-    "font = {'family' : 'normal',\n",
-    "        'weight' : 'normal',\n",
-    "        'size'   : 18}\n",
-    "mpl.rc('font', **font)\n",
-    "mpl.rcParams['figure.figsize'] = 10, 10\n",
-    "mpl.rcParams['pdf.fonttype'] = 42\n",
-    "import seaborn as sns\n",
-    "sns.set(style=\"ticks\", color_codes=True, font_scale=1.25)"
+    "%matplotlib"
    ]
   },
   {
@@ -74,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "param_file_path = '../../params_sal1.yaml'\n",
+    "param_file_path = './params.yaml'\n",
     "params = mm3.init_mm3_helpers(param_file_path)\n",
     "\n",
     "# load specs file\n",
@@ -135,6 +127,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Ploting saving settings\n",
+    "* Create a folder for saving all functions and a flag"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_dir = './plots_filtered/'\n",
+    "if not os.path.exists(plot_dir):\n",
+    "    os.makedirs(plot_dir)\n",
+    "save_plots = False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Filter cells\n",
     "* mm3_plots.py and mm3_helpers.py have convinient functions for filtering."
    ]
@@ -145,9 +157,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Cells = mm3_plots.find_cells_of_birth_label(Complete_Cells, label_num=2)\n",
-    "Cells = mm3_plots.find_cells_born_before(Cells, born_before=300)\n",
-    "Cells = mm3_plots.filter_by_stat(Cells, center_stat='mean', std_distance=3)"
+    "Cells = mm3_plots.find_cells_of_birth_label(Complete_Cells, label_num=[1,2,3])\n",
+    "Cells = mm3_plots.find_cells_born_after(Cells, born_after=0)\n",
+    "Cells = mm3_plots.find_cells_born_before(Cells, born_before=10000)\n",
+    "Cells = mm3_plots.filter_by_stat(Cells, center_stat='mean', std_distance=3)\n",
+    "\n",
+    "# This statement can be used in the figure captions\n",
+    "filtering_statement = ('Cells born after t=0 and before t=10000 with birth label 1, 2 or 3.' \n",
+    "                       ' Filtered by 3 standard deviations of the median for all parameters.')"
    ]
   },
   {
@@ -166,7 +183,27 @@
    "source": [
     "Cells_df = mm3_plots.cells2df(Cells)\n",
     "columns = ['sb', 'sd', 'delta', 'tau', 'elong_rate', 'septum_position']\n",
-    "display(Cells_df[columns].describe())"
+    "display(Cells_df[columns].describe())\n",
+    "n = Cells_df[columns].describe()['sb']['count']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Stats for rescaled\n",
+    "* Standard deviation is the CV. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Cells_df_r = mm3_plots.cells2df(Cells, rescale=True)\n",
+    "columns = ['sb', 'sd', 'delta', 'tau', 'elong_rate', 'septum_position']\n",
+    "display(Cells_df_r[columns].describe())"
    ]
   },
   {
@@ -185,13 +222,14 @@
     "fig, ax = mm3_plots.violin_fovs(Cells_df)\n",
     "\n",
     "# Figure caption\n",
-    "txt = 'Figure caption text'\n",
+    "txt = 'Parameters across FOVs.\\n%s n=%d.' % (filtering_statement, n)\n",
     "fig.text(.1, 0.025, txt)\n",
     "plt.subplots_adjust(bottom=0.075, left=0.075, right=0.95)\n",
     "\n",
     "# show and save figure\n",
     "plt.show()\n",
-    "fig.savefig('./plots/cell_parameters_by_fov.png', dpi=100)"
+    "if save_plots:\n",
+    "    fig.savefig(plot_dir + 'cell_parameters_by_fov.png', dpi=100)"
    ]
   },
   {
@@ -209,15 +247,13 @@
    "source": [
     "fig, ax = mm3_plots.violin_birth_label(Cells_df)\n",
     "\n",
-    "fig.set_size_inches(7.5, 15)\n",
-    "txt = '''Cell parameters versus birth label. Cells with birth labels 5, 6, and 7 \n",
-    "(of which there were very few), were first discarded. Then, cells were filtered \n",
-    "to be within 3 standard deviations of the mean. '''\n",
+    "txt = 'Parameters by birth label.\\n%s n=%d.' % (filtering_statement, n)\n",
     "fig.text(.1,0.025,txt)\n",
     "plt.subplots_adjust(bottom=0.1)\n",
     "\n",
     "plt.show()\n",
-    "# fig.savefig('./plots/cell_parameters_by_birth_label.png', dpi=100)"
+    "if save_plots:\n",
+    "    fig.savefig(plot_dir + 'cell_parameters_by_birth_label.png', dpi=100)"
    ]
   },
   {
@@ -237,12 +273,37 @@
    "source": [
     "fig, ax = mm3_plots.hex_time_plot(Cells_df, time_mark='birth_time', x_extents=[0,300])\n",
     "\n",
-    "txt = 'Figure caption text'\n",
+    "txt = 'Parameters over time.\\n%s n=%d.' % (filtering_statement, n)\n",
     "fig.text(.1,0.025,txt)\n",
     "plt.subplots_adjust(bottom=0.1, left=0.075, right=0.95)\n",
     "\n",
     "plt.show()\n",
-    "# fig.savefig('./plots/cell_parameters_over_time.png', dpi=100)"
+    "if save_plots:\n",
+    "    fig.savefig(plot_dir + 'cell_parameters_over_time.png', dpi=100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Parameter parameters over time and rate of change"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = mm3_plots.derivative_plot(Cells_df, time_mark='birth_time', time_window=10)\n",
+    "\n",
+    "txt = 'Parameter derivatives over time. 10 min time window.\\n%s n=%d.' % (filtering_statement, n)\n",
+    "fig.text(.1,0.025,txt)\n",
+    "plt.subplots_adjust(bottom=0.1, left=0.075, right=0.95)\n",
+    "\n",
+    "plt.show()\n",
+    "if save_plots:\n",
+    "    fig.savefig(plot_dir + 'parameter_derivative_over_time.png', dpi=100)"
    ]
   },
   {
@@ -258,15 +319,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = mm3_plots.plot_traces(Cells)\n",
+    "fig, ax = mm3_plots.plot_traces(Cells, trace_limit=1000)\n",
     "\n",
     "ax[0].set_ylim([0,10])\n",
-    "txt = 'Figure caption text'\n",
+    "txt = 'Traces from 1000 randomly chosen cells.\\n%s n=%d.' % (filtering_statement, n)\n",
     "fig.text(.1,0.025,txt)\n",
     "plt.subplots_adjust(bottom=0.1, left=0.075, right=0.95)\n",
     "\n",
     "plt.show()\n",
-    "# fig.savefig('./plots/traces.png', dpi=100)"
+    "if save_plots:\n",
+    "    fig.savefig(plot_dir + 'traces.png', dpi=100)"
    ]
   },
   {
@@ -307,12 +369,13 @@
    "source": [
     "fig, ax = mm3_plots.plot_distributions(Cells_df)\n",
     "\n",
-    "txt = 'Figure caption text'\n",
+    "txt = 'Parameters distributions.\\n%s n=%d.' % (filtering_statement, n)\n",
     "fig.text(.1,0.05,txt)\n",
     "plt.subplots_adjust(bottom=0.13, left=0.075, right=0.95)\n",
     "\n",
     "plt.show()\n",
-    "# fig.savefig('./plots/distributions.png', dpi=100)"
+    "if save_plots:\n",
+    "    fig.savefig(plot_dir + 'distributions.png', dpi=100)"
    ]
   },
   {
@@ -330,12 +393,13 @@
    "source": [
     "fig, ax = mm3_plots.plot_rescaled_distributions(Cells_df)\n",
     "\n",
-    "txt = 'Figure caption text'\n",
+    "txt = 'Parameters distributions rescaled by mean.\\n%s n=%d.' % (filtering_statement, n)\n",
     "fig.text(.1,0.05,txt)\n",
     "plt.subplots_adjust(bottom=0.35)\n",
     "\n",
     "plt.show()\n",
-    "# fig.savefig('./plots/rescaled_distributions.png', dpi=100)"
+    "if save_plots:\n",
+    "    fig.savefig(plot_dir + 'rescaled_distributions.png', dpi=100)"
    ]
   },
   {
@@ -356,12 +420,13 @@
     "\n",
     "g = mm3_plots.plot_correlations(Cells_df_r, rescale=True)\n",
     "\n",
-    "txt = 'Figure caption text'\n",
+    "txt = 'Parameters correlations rescaled by mean.\\n%s n=%d.' % (filtering_statement, n)\n",
     "g.fig.text(.1,0.05,txt)\n",
     "plt.subplots_adjust(bottom=0.15)\n",
     "\n",
     "plt.show()\n",
-    "# g.fig.savefig('./plots/correlations_rescaled.png', dpi=100)"
+    "if save_plots:\n",
+    "    fig.savefig(plot_dir + 'correlations_rescaled.png', dpi=100)"
    ]
   },
   {
