--- a/notebooks/mm3_shift_analysis.ipynb
+++ b/notebooks/mm3_shift_analysis.ipynb
@@ -84,7 +84,7 @@
     "    \n",
     "# load cell data dict\n",
     "with open('./complete_cells.pkl', 'r') as cell_file:\n",
-    "    Mother_Cells = pickle.load(cell_file)"
+    "    Complete_Cells = pickle.load(cell_file)"
    ]
   },
   {
@@ -100,7 +100,7 @@
     "shift_t = \n",
     "\n",
     "# used for coloring single traces\n",
-    "tif_width = 2000"
+    "tif_width = "
    ]
   },
   {
@@ -142,7 +142,7 @@
     "t1 = 100\n",
     "t2 = 1000\n",
     "\n",
-    "# Cells = mm3_plots.find_cells_of_birth_label(Complete_Cells, label_num=1)\n",
+    "Cells = mm3_plots.find_cells_of_birth_label(Complete_Cells, label_num=1)\n",
     "# Cells = mm3_plots.find_cells_born_after(Cells, born_after=75)\n",
     "# Cells = mm3_plots.find_cells_born_before(Cells, born_before=t2)\n",
     "# Cells = mm3_plots.filter_by_stat(Cells, center_stat='mean', std_distance=3)\n",
@@ -150,7 +150,7 @@
     "Lineages = mm3_plots.find_continuous_lineages(Lineages, t1=t1, t2=t2)\n",
     "\n",
     "# number of cells\n",
-    "n = len(Mother_Cells)\n",
+    "n = len(Cells)\n",
     "print('There are {} Cells'.format(n))\n",
     "\n",
     "# tell us how many cells we have\n",
@@ -204,7 +204,7 @@
     "\n",
     "# plot a line for the shift time\n",
     "for axis in ax:\n",
-    "    axis.axvline(x=shift_t*time_int, linewidth=2, color='g', ls='--', alpha=0.5, label='Shift-up time')\n",
+    "    axis.axvline(x=shift_t, linewidth=2, color='g', ls='--', alpha=0.5, label='Shift-up time')\n",
     "    axis.set_xlim([t1, t2])\n",
     "\n",
     "fig.suptitle('All Continuous Lineage Traces', size=26)\n",
@@ -212,7 +212,7 @@
     "\n",
     "plt.show()\n",
     "\n",
-    "if True: fig.savefig(os.path.join(plot_dir, 'single_traces'), dpi=200)"
+    "if False: fig.savefig(os.path.join(plot_dir, 'single_traces'), dpi=200)"
    ]
   },
   {
