fix plotting channel locs

--- a/notebooks/mm3_debug_segmentation.ipynb
+++ b/notebooks/mm3_debug_segmentation.ipynb
@@ -93,11 +93,32 @@
     "param_file_path = '../params.yaml'\n",
     "params = mm3.init_mm3_helpers(param_file_path)\n",
     "\n",
+    "# load channel_masks\n",
+    "with open(params['ana_dir'] + '/channel_masks.pkl', 'r') as specs_file:\n",
+    "    channel_masks = pickle.load(specs_file)\n",
+    "\n",
     "# load specs file\n",
     "with open(params['ana_dir'] + '/specs.pkl', 'r') as specs_file:\n",
     "    specs = pickle.load(specs_file)\n",
     "\n",
     "print(specs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plot channel locations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = mm3_plots.channel_locations(channel_masks, filetype='channel_masks')\n",
+    "# fig = mm3_plots.channel_locations(specs, filetype='specs')"
    ]
   },
   {
