ring and nuc plotting

--- a/notebooks/mm3_shift_analysis.ipynb
+++ b/notebooks/mm3_shift_analysis.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Analysis of [Exp Name]\n",
-    "## Started [Date]\n",
+    "## Performed [Date]\n",
     "\n",
     "* Evernote experimental note:\n",
     "* Evernote analysis note with graphs from this notebook:\n",
