--- a/notebooks/mm3_shift_analysis_stitch.ipynb
+++ b/notebooks/mm3_shift_analysis_stitch.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analysis of \n",
-    "## Performed \n",
+    "# Analysis of [Exp Name]\n",
+    "## Performed [Date]\n",
     "* Shift-up analysis with stitched cells"
    ]
   },
