--- a/notebooks/mm3_debug_segmentation.ipynb
+++ b/notebooks/mm3_debug_segmentation.ipynb
@@ -72,7 +72,8 @@
    "source": [
     "# you need to import mm3_helpers\n",
     "sys.path.insert(0, '/path/to/mm3/')\n",
-    "import mm3_helpers as mm3"
+    "import mm3_helpers as mm3\n",
+    "# import mm3_plots"
    ]
   },
   {
@@ -93,13 +94,13 @@
     "param_file_path = '../params.yaml'\n",
     "params = mm3.init_mm3_helpers(param_file_path)\n",
     "\n",
-    "# load channel_masks\n",
-    "with open(params['ana_dir'] + '/channel_masks.pkl', 'r') as specs_file:\n",
-    "    channel_masks = pickle.load(specs_file)\n",
+    "# # load channel_masks\n",
+    "# with open(os.path.join(params['ana_dir'], 'channel_masks.pkl'), 'r') as chnl_file:\n",
+    "#     channel_masks = pickle.load(chnl_file)\n",
     "\n",
     "# load specs file\n",
-    "with open(params['ana_dir'] + '/specs.pkl', 'r') as specs_file:\n",
-    "    specs = pickle.load(specs_file)\n",
+    "with open(os.path.join(params['ana_dir'], 'specs.yaml'), 'r') as specs_file:\n",
+    "    specs = yaml.safe_load(specs_file)\n",
     "\n",
     "print(specs)"
    ]
@@ -117,8 +118,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = mm3_plots.channel_locations(channel_masks, filetype='channel_masks')\n",
-    "# fig = mm3_plots.channel_locations(specs, filetype='specs')"
+    "# fig = mm3_plots.channel_locations(channel_masks, filetype='channel_masks')\n",
+    "fig = mm3_plots.channel_locations(specs, filetype='specs')"
    ]
   },
   {
@@ -200,9 +201,9 @@
    "source": [
     "# choose parameters \n",
     "OTSU_threshold = 1.0\n",
-    "first_opening_size = 3\n",
-    "distance_threshold = 3\n",
-    "second_opening_size = 2\n",
+    "first_opening_size = 2\n",
+    "distance_threshold = 2\n",
+    "second_opening_size = 1\n",
     "min_object_size = 25"
    ]
   },
@@ -487,8 +488,8 @@
    "source": [
     "# choose parameter ranges\n",
     "OTSU_thresholds = [1.0]\n",
-    "first_opening_sizes = [3]\n",
-    "distance_thresholds = [3, 2]\n",
+    "first_opening_sizes = [2, 3]\n",
+    "distance_thresholds = [2]\n",
     "second_opening_sizes = [1]\n",
     "min_object_size = 20\n",
     "\n",
@@ -504,7 +505,7 @@
     "# p_combos = [(1.2,3,2,2), (1.4,3,2,1)]\n",
     "\n",
     "# determine number of images to be analyzed \n",
-    "no_samples = 10\n",
+    "no_samples = 25\n",
     "# list contains tuples of (fov_id, peak_id, timepoint)\n",
     "sample_ids = [] \n",
     "timepoints = None # place holder for number of time points\n",
